--- a/styles/styles.css
+++ b/styles/styles.css
@@ -101,7 +101,7 @@ body {
   font-size: 24px;
   line-height: calc(55 / 45);
   color: #0e4c6d;
-  margin-top: 9px;
+  margin-top: 12px;
   margin-bottom: 15px;
   text-align: center;
 }
@@ -307,7 +307,7 @@ body {
 }
 .contacts-content-wrap {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   gap: 40px;
   overflow: auto;
 }
